# robots

./: .cursorrules  .env.local  .gitignore  ARCHITECTURE_ISSUES.md  Cargo.toml  GENERATION_PROCESS.md  INTEGRATION_TESTS_COMPLETE.md  OPTIMIZATION_REPORT.md  OsEngine_analysis_multitimeframe.md  OsEngine_analysis_report.md  QUICKSTART_TESTING.md  configure_mt5_wine.sh  makefile  requirements.txt  schema.drawio  Сжатие_таймфреймов_1h_4h.md
benches/: backtest_performance.rs
cursor-memory-bank/: MEMORY_BANK_OPTIMIZATIONS.md  README.md  RELEASE_NOTES.md  memory_bank_upgrade_guide.md
docker/: README.md  entrypoint.sh  env.example  env.production  start-infrastructure.sh  stop-infrastructure.sh
docs/: ALIAS_PARSING_ANALYSIS_AND_SOLUTIONS.md  INDICATOR_BUILD_RULES.md  STRATEGY_BUILDING_GUIDE.md  backtest-process.md  discovery_generator_example.md  flutter_nocode_trading.md  genetic-algorithm-basics.md  genetic-algorithm-detailed-schema.puml  genetic-algorithm-detailed.md  genetic-algorithm-schema.puml  genetic-optimization-explained.md  genetic-optimization-usage.md  optimization-architecture-explained.md  performance-analysis.md  profiling.md  schema.puml  strategy-discovery-config.md  strategy_layer_usage.md
examples/: candidate_builder_rules_example.json  genetic_optimization.rs  genetic_optimization_v2.rs  per_structure_optimization.rs
migrations/: DATA_ARCHITECTURE.md  README.md  migrate.py  run.sh
scripts/: README.md  README_PERF_BACKTEST.md  README_PROFILING.md  profile-flamegraph.sh  profile-perf.sh
src/: ARCHITECTURE.md  condition_demo.rs  db.rs  debug.rs  lib.rs  main.rs  mod.rs
tests/: clickhouse_integration_tests.rs  mongodb_integration_tests.rs
uralpro/: quik.tab  Описание_robot_uralpro.doc  (+1 more)
vvTS/: ABTR.cs  ADX.cs  ADXVMA.cs  (+425 more)
(+379 files in other folders)
