[package]
name = "robots"
version = "0.1.0"
edition = "2018"

[dependencies]
dotenv = "0.15.0"
mongodb = "2.5.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.8"
serde = "1.0.132"
serde_json = "1.0.73"
async-trait = "0.1.68"
sha1 = "0.10.5"
hex = "0.4.3"
futures = "0.3.28"
chrono = "0.4.26"
itertools = "0.14.0"
try-partialord = "0.1.3"
num-traits = "0.2.17"
enum-iterator = "2.1.0"