[package]
name = "robots"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "robots"
path = "src/main.rs"

[lib]
name = "robots"
path = "src/lib.rs"

[dependencies]
# Existing dependencies
dotenv = "0.15.0"
mongodb = "2.5.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
tokio-stream = "0.1.8"
serde = "1.0.132"
serde_json = "1.0.73"
async-trait = "0.1.68"
sha1 = "0.10.5"
hex = "0.4.3"
futures = "0.3.28"
chrono = { version = "=0.4.39", features = ["serde"] }
itertools = "0.14.0"
try-partialord = "0.1.3"
num-traits = "0.2.17"
enum-iterator = "2.1.0"
thiserror = "2.0.16"

# Data Access Layer dependencies
# Database drivers
redis = "0.24"
clickhouse = "0.11"
tokio-postgres = "0.7"
deadpool-postgres = "0.10"

# HTTP clients
reqwest = { version = "0.11", features = ["json"] }

# Error handling
anyhow = "1.0"

# Futures utilities
futures-util = "0.3"

# Additional dependencies for Arrow Flight and DataFusion
tonic = "0.10"
num_cpus = "1.0"

# Arrow/Parquet dependencies
arrow = "50.0"
parquet = "50.0"
datafusion = "37.0"
arrow-flight = { version = "50.0", features = ["flight-sql-experimental"] }

[dependencies.comfy-table]
version = "=7.1.1"

[dev-dependencies]
tempfile = "3.10"
